# lidco

./: .env.example  .gitignore  CLAUDE.md  IMPROVEMENTS.md  PLAN.md  QUICKSTART.md  README.md  ROADMAP.md  ROADMAP_ARCHIVE.md  START.md  TERMINAL.md  install-linux-macos.sh  install-windows.bat  llm_providers.yaml  pyproject.toml
.github/actions/lidco/: action.yml
.lidco/: aliases.json  approval_queue.json  audit.md  audit2.md  coverage.json  error_ledger.db  notes.json  research_debug_innovations.md
.lidco/backups/030b25602f4d/: manifest.json
.lidco/backups/06528260828c/: manifest.json
.lidco/backups/19631093e31a/: manifest.json
.lidco/backups/4a1e94e21ef2/: manifest.json
.lidco/backups/4de664d2a7ad/: manifest.json
.lidco/backups/833c99991cca/: manifest.json
.lidco/backups/d0b53c148176/: manifest.json
.lidco/backups/e4189262a587/: manifest.json
.lidco/rag_index/: chroma.sqlite3
.lidco/reports/: report.html  report.json
.lidco/screenshots/: https_example.com.json
configs/: default.yaml  llm_providers.yaml  models.yaml
configs/examples/: README.md  zai-api.yaml  zai-coding-plan.yaml  zai-free.yaml
docs/: COMMANDS.md  README.md
docs/en/: README.md  agents.md  android-studio-plugin.md  api-reference.md  architecture.md  configuration.md  getting-started.md  llm-providers.md  server.md  troubleshooting.md
docs/ru/: README.md  agents.md  android-studio-plugin.md  api-reference.md  architecture.md  configuration.md  getting-started.md  llm-providers.md  server.md  troubleshooting.md
examples/: custom_agent.yaml
ide/android-studio-plugin/: INSTALL.md  build.gradle.kts  gradle.properties  settings.gradle.kts
scripts/: gen_command_index.py  test_recent.py
src/lidco/: __init__.py  __main__.py
src/lidco/a11y/: __init__.py  high_contrast.py  reduced_motion.py  screen_reader.py  voice_control.py
src/lidco/actions/: __init__.py  code_provider.py  file_provider.py  git_provider.py  registry.py
src/lidco/adaptive/: __init__.py  adapter.py  ranker.py  selector.py  style.py
src/lidco/adr/: __init__.py  generator.py  manager.py  search.py  validator.py
src/lidco/agent_memory/: __init__.py  episodic.py  procedural.py  retrieval.py  semantic.py
src/lidco/agents/: arena.py  arena_leaderboard.py  auto_fixer.py  background.py  base.py  brainstorm.py  budget_splitter.py  cancellation.py  child_session.py  comparison.py  dag_runner.py  ensemble.py  factory.py  graph.py  lifecycle.py  loader.py  mailbox.py  migration_agent.py  orchestrator.py  pipeline.py  plan_act_controller.py  plan_validator.py  registry.py  result_aggregator.py  role_agents.py  runtime_registry.py  shared_task_list.py  summarizer.py  team_coordinator.py  team_registry.py  teammate_challenge.py  worker_pool.py  workflow_agent.py  worktree.py  worktree_runner.py
src/lidco/ai/: adaptive_budget.py  batch_llm.py  budget_alerts.py  cache_warm.py  confidence_router.py  cost_compare.py  cost_projector.py  ollama_provider.py  plan_rollback.py  sampler.py  self_consistency.py  thinking.py
tests/: conftest.py
tests/integration/: test_orchestration_flow.py
vscode/: README.md  package.json
vscode/src/: extension.ts  lidco_client.ts
(+3475 files in other folders)
