[project]
name = "lidco"
version = "0.1.0"
description = "LLM-Integrated Development COmpanion - multi-agent coding assistant"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "LIDCO Team" }]

dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "litellm>=1.40.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.7.2",
    "tree-sitter>=0.22.0",
    "watchdog>=4.0.0",
    "pluggy>=1.4.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[project.scripts]
lidco = "lidco.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lidco"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib -x"

# Memory-safe test markers:
#   pytest                          → runs ALL tests (may use lots of RAM)
#   pytest tests/unit/test_q160/    → run specific quarter
#   pytest -m recent                → last 20 quarters only
markers = [
    "recent: tests from recent quarters (Q164+)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
